Changed the background color of the demo iframe to prevent issues with dark mode

--- a/src/components/GameDemo/styles.module.scss
+++ b/src/components/GameDemo/styles.module.scss
@@ -7,7 +7,7 @@
 }
 
 .gameContainer {
-  background-color: transparent !important;
+  background-color: #FFF !important;
   height: 100%;
   width: 100%;
 }
